tests/rosetta/out/Rust/bitmap-midpoint-circle-algorithm.error
rustc: exit status 1
error[E0308]: mismatched types
  --> /tmp/bitmap-midpoint-circle-algorithm.rs:50:36
   |
50 |         while end > 0 && row[end - 1 as usize] == " " {
   |                                    ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/bitmap-midpoint-circle-algorithm.rs:50:34
   |
50 |         while end > 0 && row[end - 1 as usize] == " " {
   |                                  ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[&'static str]` cannot be indexed by `i32`
  --> /tmp/bitmap-midpoint-circle-algorithm.rs:50:30
   |
50 |         while end > 0 && row[end - 1 as usize] == " " {
   |                              ^^^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[&'static str]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<&'static str>` to implement `Index<i32>`

error[E0308]: mismatched types
  --> /tmp/bitmap-midpoint-circle-algorithm.rs:59:16
   |
48 |     fn trimRight(row: Vec<&'static str>) -> &'static str {
   |                                             ------------ expected `&'static str` because of return type
...
59 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
59 |         return &s;
   |                +

warning: variable does not need to be mutable
  --> /tmp/bitmap-midpoint-circle-algorithm.rs:61:9
   |
61 |     let mut g = circle(10);
   |         ----^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error: aborting due to 4 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
